# Lafomuo

./: Anchor.toml  index.js  package.json
programs/solana-real-estate-dao/: Cargo.toml
programs/solana-real-estate-dao/src/: errors.rs  events.rs  lib.rs
programs/solana-real-estate-dao/src/instructions/: create_governor.rs  create_proposal.rs  mod.rs
programs/solana-real-estate-dao/src/state/: governor.rs  mod.rs  proposal.rs
programs/solana-real-estate-tokenization/: Cargo.toml
programs/solana-real-estate-tokenization/src/: assertions.rs  constants.rs  errors.rs  events.rs  lib.rs  macros.rs  utils.rs
programs/solana-real-estate-tokenization/src/instructions/: claim_dividend.rs  create_distribute_dividend.rs  exit.rs  fractionalize_nft.rs  issue_nft.rs  lock.rs  mod.rs  new_escrow.rs  new_platform.rs  setup_platform.rs  vote_on_price.rs
programs/solana-real-estate-tokenization/src/state/: asset_basket.rs  asset_locker.rs  auction.rs  dividend_claimed.rs  dividend_distributor.rs  fractional_token_escrow.rs  fractionalized_token_locker.rs  mod.rs  platform_governor.rs  setting.rs
scripts/: account-decoder.js  create-dividend-checkpoint.js  fractionalize-nft.js  lock.js  mint-nft.js  new-escrow.js  partial-sign.js  setup-platform.js
tests/: solana-real-estate-tokenization.ts
tests/idls/: mpl_token_metadata.json
tests/utils/: index.ts
