[package]
name = "solana-real-estate-dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_real_estate_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
base64 = "0.13.0"
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "1.10"
num-traits = "0.2"
